--- a/school-crowd.css
+++ b/school-crowd.css
@@ -17,6 +17,12 @@
 	}
 }
 
+/* does not work on Chrome, loaded tiles dames the corners :-/
+.leaflet-container {
+	border-radius: 10px;
+}
+*/
+
 #userpw td {
 	border-top: none !important; 
 }
@@ -41,6 +47,9 @@
 	color: #777;
 }
 
+.logo { text-align: right; }
+.logo img { background-color: white; padding: 2px; }
+
 body {
 	font-family: Helvetica, Verdana, Arial, sans-serif;
 	background-color: #007395;
@@ -48,6 +57,14 @@ body {
 p { font-family: Helvetica, Verdana, Arial, sans-serif }
 
 .identity, #helpDiv { color: white; }
+
+#heading {
+	padding: 10px;
+	margin-top: 0.2cm;
+	margin-bottom: 0.2cm;
+	background-color: rgb(0,41,93);
+	color: white;
+}
 
 #delTable {
 	background-color: lightblue;
