--- a/school-crowd.css
+++ b/school-crowd.css
@@ -11,8 +11,8 @@ p { font-family: Helvetica, Verdana, Arial, sans-serif }
 	padding: 10px;
 	margin-top: 0.2cm;
 	margin-bottom: 0.2cm; 
-	background-color: rgb(0,41,93);
-	color: white;
+	color: rgb(0,41,93);
+	background-color: white;
 }
 
 #map {
@@ -61,8 +61,10 @@ p { font-family: Helvetica, Verdana, Arial, sans-serif }
 .identity, #helpDiv { color: white; }
 
 #delTable {
-	background-color: lightblue;
-	/* height: 4cm; */
-	/* border: 2px solid mediumblue; */
+	background-color: rgb(0,41,93);
+	color: white;
 	overflow: auto;
+}
+#delTable input {
+	color: black;
 }
