--- a/school-crowd.css
+++ b/school-crowd.css
@@ -31,6 +31,9 @@ body {
 		width: 100%; height: 6cm;
 	}
 }
+@media only screen and (max-width: 15cm) { 
+	.info { display: none; }
+}
 
 #userpw td {
 	border-top: none !important; 
